build/apps/restreamer/overlays/prod/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: restreamer
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Restreamer
    gethomepage.dev/group: Streaming
    gethomepage.dev/icon: twitch.png
    gethomepage.dev/name: Restramer
  labels:
    app.kubernetes.io/name: restreamer
spec:
  rules:
  - host: stream.graytonward.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: restreamer-dashboard
            port: 
              name: web
